--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "description": "Job Connect is a software that helps connect between applicant and recruiter",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "mongoose": "^6.10.5",
-    "mongoose-delete": "^0.5.4"
+    "mongoose-delete": "^0.5.4",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
