--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "express-validator": "^7.0.1",
     "mongoose": "^6.10.5",
     "mongoose-delete": "^0.5.4",
     "path": "^0.12.7"
