Login recruiter to get access_token

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ HOST=localhost
 PORT=3000
 CONNECTION_STRING=mongodb://127.0.0.1:27017
 DBNAME=jobconnect
+COOKIE_SECRET=euio23uie32n23iuu3e
+ACCESS_TOKEN=fjri20321k1eek12e4rjroif23o32f
+REFRESH_TOKEN=21k32o1kdsjri234kljret5930f32
