--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.5",
     "mongoose-delete": "^0.5.4",
+    "multer": "^1.4.5-lts.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
