--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 HOST=localhost
 PORT=3000
-CONNECTION_STRING=mongodb://127.0.0.1:27017
+CONNECTION_STRING=mongodb+srv://jobconnect:gKgbOj9UHjyQY0OE@jobconnect.857z8e9.mongodb.net/?retryWrites=true&w=majority
 DBNAME=jobconnect
 COOKIE_SECRET=euio23uie32n23iuu3e
 ACCESS_TOKEN=fjri20321k1eek12e4rjroif23o32f
