--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jobconnect",
   "version": "1.0.0",
   "description": "Job Connect is a software that helps connect between applicant and recruiter",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
