--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "jobconnect",
   "version": "1.0.0",
   "description": "Job Connect is a software that helps connect between applicant and recruiter",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
